feat: Update SEO metadata and improve footer content for better clarity

--- a/index.html
+++ b/index.html
@@ -4,43 +4,114 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Fundamentos da Fé - Comunidade | Plataforma Educacional Cristã
+      Fundamentos da Fé AD Seta Araguaína | Estudo Bíblico Online | Assembleia
+      de Deus
     </title>
 
-    <!-- Meta Tags SEO -->
+    <!-- Meta Tags SEO Otimizadas -->
     <meta
       name="description"
-      content="Plataforma educacional cristã para estudos bíblicos e fundamentos da fé. Módulos interativos, material em PDF e acompanhamento de progresso."
+      content="Fundamentos da Fé AD Seta Araguaína - Plataforma educacional cristã com módulos de estudo bíblico, cursos online gratuitos da Assembleia de Deus. Estudos bíblicos para crescimento espiritual em Araguaína-TO."
     />
     <meta
       name="keywords"
-      content="estudos bíblicos, fundamentos da fé, educação cristã, teologia, bíblia, doutrina cristã"
+      content="fundamentos da fe adseta araguaina, fundamentos da fe ad seta, assembleia de deus araguaina, ad seta araguaina, estudo biblico araguaina, igreja assembleia deus araguaina, curso biblico assembleia deus, educação crista araguaina, escola dominical ad seta, discipulado assembleia deus, ministerio ensino ad seta, recursos biblicos araguaina, comunidade crista araguaina, ensino biblico tocantins, igreja evangelica araguaina, estudos biblicos online ad, modulos biblicos assembleia deus, declaracao de fe ad, crescimento espiritual araguaina, palavra de deus ad seta"
     />
     <meta name="author" content="Pedro Allas dos Santos Borges" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="geo.region" content="BR-TO" />
+    <meta name="geo.placename" content="Araguaína" />
+    <meta name="geo.country" content="Brazil" />
+    <meta name="ICBM" content="-7.1909,-48.2073" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph Meta Tags Melhoradas -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
       content="https://fundamentosdafe-comunidade.netlify.app/"
     />
-    <meta property="og:title" content="Fundamentos da Fé - Comunidade" />
+    <meta
+      property="og:title"
+      content="Fundamentos da Fé AD Seta Araguaína | Assembleia de Deus"
+    />
     <meta
       property="og:description"
-      content="Plataforma educacional cristã para estudos bíblicos e fundamentos da fé"
+      content="Plataforma educacional da AD Seta Araguaína com módulos de estudo bíblico gratuitos, cursos online e recursos para crescimento espiritual."
     />
+    <meta
+      property="og:site_name"
+      content="Fundamentos da Fé AD Seta Araguaína"
+    />
+    <meta property="og:locale" content="pt_BR" />
 
-    <!-- Twitter -->
+    <!-- Twitter Card Melhorada -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
       content="https://fundamentosdafe-comunidade.netlify.app/"
     />
-    <meta property="twitter:title" content="Fundamentos da Fé - Comunidade" />
+    <meta
+      property="twitter:title"
+      content="Fundamentos da Fé AD Seta Araguaína"
+    />
     <meta
       property="twitter:description"
-      content="Plataforma educacional cristã para estudos bíblicos e fundamentos da fé"
+      content="Módulos de estudo bíblico da Assembleia de Deus Seta Araguaína"
     />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": ["EducationalOrganization", "Church"],
+        "name": "Fundamentos da Fé AD Seta Araguaína",
+        "alternateName": [
+          "AD Seta Araguaína",
+          "Assembleia de Deus Seta",
+          "Fundamentos da Fé ADSeta"
+        ],
+        "description": "Plataforma educacional da Assembleia de Deus Seta Araguaína com módulos de estudo bíblico online",
+        "url": "https://fundamentosdafe-comunidade.netlify.app/",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Araguaína",
+          "addressRegion": "TO",
+          "addressCountry": "BR"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": -7.1909,
+          "longitude": -48.2073
+        },
+        "areaServed": {
+          "@type": "City",
+          "name": "Araguaína",
+          "containedInPlace": {
+            "@type": "State",
+            "name": "Tocantins"
+          }
+        },
+        "denomination": "Assembleia de Deus",
+        "educationalCredentialAwarded": "Certificado de Conclusão",
+        "teaches": [
+          "Estudo Bíblico",
+          "Teologia Cristã",
+          "Discipulado",
+          "Crescimento Espiritual",
+          "Declaração de Fé AD"
+        ],
+        "audience": {
+          "@type": "Audience",
+          "audienceType": "Membros da Assembleia de Deus"
+        },
+        "provider": {
+          "@type": "Person",
+          "name": "Pedro Allas dos Santos Borges",
+          "url": "https://portifoliopedroallas.netlify.app/"
+        }
+      }
+    </script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
